--- a/amazon-clone/src/Components/Category/category.module.css
+++ b/amazon-clone/src/Components/Category/category.module.css
@@ -5,7 +5,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .category img {
-  width: 100px;
+  width: 100%;
   object-fit: contain;
   max-height: 250px;
   padding: 0px 10px;
