--- a/amazon-clone/src/Components/Header/header.module.css
+++ b/amazon-clone/src/Components/Header/header.module.css
@@ -1,3 +1,8 @@
+.fixed{
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 .header_container {
     background-color: #1a1a1a;
     display: flex;
@@ -125,7 +130,7 @@
   }
   
   @media screen and (max-width: 576px) {
-    .heder_container {
+    .header_container {
       display: flex;
       flex-direction: column !important;
       height: auto;
